<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue_zup"
    tools:context=".ui.splash.view.SplashActivity">

    <ImageView
        android:id="@+id/ivLogoApp"
        android:layout_width="@dimen/size_170"
        android:layout_height="@dimen/size_170"
        android:contentDescription="@string/image_description_logo1"
        android:src="@drawable/bez_white"
        app:layout_constraintBottom_toTopOf="@id/ivHappyPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivHappyPeople"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_240"
        android:contentDescription="@string/image_description_happy_people"
        android:src="@drawable/ilustra_splash"
        app:layout_constraintBottom_toTopOf="@id/ivLogoZupWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoApp" />

    <ImageView
        android:id="@+id/ivLogoZupWhite"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_85"
        android:contentDescription="@string/logo_white"
        android:src="@drawable/logo_zup_branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHappyPeople" />

</androidx.constraintlayout.widget.ConstraintLayout>