<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/ivLogoApp"
        android:layout_width="@dimen/size_170"
        android:layout_height="@dimen/size_170"
        android:layout_margin="@dimen/margin_54"
        android:contentDescription="@string/image_description_logo2"
        android:src="@drawable/bez_dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_100"
        android:layout_marginBottom="@dimen/margin_20"
        android:fontFamily="@font/montserrat__bold"
        android:textAlignment="center"
        android:textColor="@color/blue_zup"
        android:textSize="@dimen/fontSize_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoApp"
        tools:text="Nome: Nome de usuário" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:fontFamily="@font/montserrat__bold"
        android:textAlignment="center"
        android:textColor="@color/blue_zup"
        android:textSize="@dimen/fontSize_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        tools:text="E-mail: email@zup.com.br" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_20"
        android:backgroundTint="@color/lightGray_zup"
        android:fontFamily="@font/montserrat__bold"
        android:text="@string/exit"
        android:textAlignment="center"
        android:textColor="@color/blue_zup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserEmail" />

    <ImageView
        android:id="@+id/ivLogoZupColorful"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_70"
        android:layout_marginTop="@dimen/margin_20"
        android:contentDescription="@string/logo_colorful"
        android:src="@drawable/logo_zup_colorido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>